--- a/ArgoCD/deployment.yml
+++ b/ArgoCD/deployment.yml
@@ -17,7 +17,7 @@ spec:
       terminationGracePeriodSeconds: 30
       containers:
       - name: swiggy-app
-        image: manlineroot12/swiggy-app:latest
+        image: deepak003007/swiggy:latest
         imagePullPolicy: "Always"
         ports:
         - containerPort: 3000
